--- a/css/style.css
+++ b/css/style.css
@@ -384,8 +384,18 @@ header .main .itemImg img {
   margin-top: 50px;
 }
 
+.blocks .items .item .img .creators img {
+  max-width: 500px;
+  height: auto;
+}
+
 .blocks .items .item .img .hodlers {
   transform: scale(1.5) translate(-10%, -16.25%);
+}
+
+.blocks .items .item .img .hodlers img {
+  max-width: 500px;
+  height: auto;
 }
 
 .achieve {
@@ -404,6 +414,11 @@ header .main .itemImg img {
   opacity: 0.7;
 }
 
+.achieve .paperPlane img {
+  max-width: 300px;
+  width: 100%;
+}
+
 .achieve .lineImg {
   margin-bottom: 50px;
 }
@@ -417,6 +432,11 @@ header .main .itemImg img {
   display: flex;
   gap: 146px;
   align-items: center;
+}
+
+.achieve .achieveLine .arrow img {
+  max-width: 32px;
+  width: 100%;
 }
 
 .achieve .achieveLine .date .month {
@@ -481,6 +501,7 @@ header .main .itemImg img {
 .tokens .items .rocket img {
   max-width: 700px;
   width: 100%;
+  height: auto;
 }
 
 .tokens .items .item1 {
@@ -510,6 +531,10 @@ header .main .itemImg img {
 
 .tokens .items .item2 .clouds {
   max-width: 700px;
+  width: 100%;
+}
+
+.tokens .items .item2 .clouds img {
   width: 100%;
 }
 
@@ -641,6 +666,12 @@ footer .footer .social a {
   padding: 10px 12px;
   border-radius: 100px;
   transition: all 0.3s;
+}
+
+footer .footer .social a img {
+  max-width: 64px;
+  width: 100%;
+  height: auto;
 }
 
 footer .footer .social a:hover {
