--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,10 @@
   font-weight: 400;
   font-style: AzoSans;
 }
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html,
 body,
 div,
@@ -101,7 +99,6 @@ video {
 }
 
 /* HTML5 display-role reset for older browsers */
-
 article,
 aside,
 details,
@@ -130,14 +127,12 @@ q {
   quotes: none;
 }
 
-blockquote:before,
-blockquote:after {
+blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-q:before,
-q:after {
+q:before, q:after {
   content: "";
   content: none;
 }
@@ -154,31 +149,60 @@ header {
   background-attachment: scroll;
   padding-bottom: 600px;
 }
-
+@media screen and (max-width: 532px) {
+  header {
+    padding: 20px 22.5px;
+  }
+}
 header .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 20px;
 }
-
 header .logo .logoImg {
   width: 100%;
   max-width: 220px;
 }
-
 header nav {
   display: flex;
   align-items: center;
   gap: 100px;
   font-weight: 700;
 }
-
+@media screen and (max-width: 1080px) {
+  header nav {
+    gap: 30px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  header nav {
+    width: 100%;
+    visibility: hidden;
+    flex-direction: column;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-350%, -50%);
+    z-index: 1;
+    text-align: center;
+    transition: all 0.3s;
+  }
+}
 header nav ul {
   display: flex;
   gap: 30px;
 }
-
+@media screen and (max-width: 1080px) {
+  header nav ul {
+    gap: 20px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  header nav ul {
+    flex-direction: column;
+  }
+}
 header nav ul li a {
   color: white;
   text-transform: uppercase;
@@ -186,7 +210,6 @@ header nav ul li a {
   text-decoration: none;
   position: relative;
 }
-
 header nav ul li a:after {
   content: "";
   border-bottom: 2px solid white;
@@ -200,7 +223,11 @@ header nav ul li a:after {
   position: absolute;
   transition: all 0.3s;
 }
-
+@media screen and (max-width: 1000px) {
+  header nav ul li a {
+    font-size: 28px;
+  }
+}
 header .sign {
   text-transform: uppercase;
   display: flex;
@@ -208,21 +235,22 @@ header .sign {
   gap: 30px;
   font-size: 14px;
 }
-
+@media screen and (max-width: 1000px) {
+  header .sign a {
+    font-size: 28px;
+  }
+}
 header .sign .up {
   cursor: pointer;
 }
-
 header .sign .in {
   position: relative;
   cursor: pointer;
 }
-
 header .sign .in a {
   color: white;
   text-decoration: none;
 }
-
 header .sign .in a:after {
   content: "";
   border-bottom: 2px solid white;
@@ -236,34 +264,39 @@ header .sign .in a:after {
   position: absolute;
   transition: all 0.3s;
 }
-
 header .main .container {
   display: flex;
   gap: 30px;
   justify-content: space-between;
 }
-
+@media screen and (max-width: 868px) {
+  header .main .container {
+    flex-wrap: wrap;
+  }
+}
 header .main .itemText {
   margin-top: 200px;
   max-width: 39%;
 }
-
+@media screen and (max-width: 868px) {
+  header .main .itemText {
+    max-width: 100%;
+    text-align: center;
+  }
+}
 header .main .itemText .link {
   color: #2278d4;
   margin-bottom: 30px;
   font-size: 18px;
 }
-
 header .main .itemText .subText {
   color: #191b21;
   font-weight: 300;
   margin-top: 30px;
 }
-
 header .main .itemText .btnGreen {
   margin-top: 50px;
 }
-
 header .main .itemImg {
   margin-top: 50px;
   max-width: 800px;
@@ -272,7 +305,12 @@ header .main .itemImg {
   justify-content: flex-end;
   margin-right: -45px;
 }
-
+@media screen and (max-width: 868px) {
+  header .main .itemImg {
+    justify-content: center;
+    margin-right: -125px;
+  }
+}
 header .main .itemImg img {
   max-width: 700px;
   width: 100%;
@@ -287,11 +325,15 @@ header .main .itemImg img {
   background-position: bottom;
   padding-bottom: 180px;
 }
-
+@media screen and (max-width: 868px) {
+  .blocks {
+    padding: 10px;
+    padding-bottom: 180px;
+  }
+}
 .blocks .container {
   visibility: hidden;
 }
-
 .blocks .info {
   margin-top: 120px;
   color: white;
@@ -300,51 +342,86 @@ header .main .itemImg img {
   gap: 10px;
   align-items: center;
 }
-
+@media screen and (max-width: 1000px) {
+  .blocks .info {
+    flex-wrap: wrap;
+  }
+}
 .blocks .info .logo {
   margin-right: 60px;
   max-width: 64px;
   width: 100%;
   flex: 1 1 10%;
 }
-
+@media screen and (max-width: 532px) {
+  .blocks .info .logo {
+    margin-right: 10px;
+  }
+}
 .blocks .info .title {
   margin-right: 65px;
   flex: 1 1 35%;
 }
-
+@media screen and (max-width: 532px) {
+  .blocks .info .title {
+    margin-right: 0px;
+  }
+}
 .blocks .info .infoBlock {
   flex: 1 1 60%;
 }
-
 .blocks .info .infoBlock .infoTitle {
   margin-bottom: 30px;
 }
-
+@media screen and (max-width: 465px) {
+  .blocks .info .infoBlock .text {
+    color: grey;
+  }
+}
 .blocks .info .infoBlock .text p {
   margin: 20px 0px;
   opacity: 0.6;
 }
-
+@media screen and (max-width: 465px) {
+  .blocks .info .infoBlock .text p {
+    opacity: 1;
+  }
+}
 .blocks .items {
   display: flex;
   gap: 20px;
   margin-top: -550px;
 }
-
+@media screen and (max-width: 1000px) {
+  .blocks .items {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 532px) {
+  .blocks .items {
+    margin-top: 50px;
+  }
+}
 .blocks .items .item {
   flex: 1 1 48%;
   padding: 20px 60px 0px 60px;
   background-color: rgba(242, 240, 244, 0.95);
   text-align: center;
   border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
-
+@media screen and (max-width: 868px) {
+  .blocks .items .item {
+    padding: 20px 30px 0px 30px;
+  }
+}
 .blocks .items .item .number {
   margin: 40px 0px;
   opacity: 0.3;
 }
-
 .blocks .items .item .subTitle {
   font-size: 36px;
   display: flex;
@@ -353,49 +430,60 @@ header .main .itemImg img {
   margin-top: 40px;
   margin-bottom: 30px;
 }
-
 .blocks .items .item .subTitle .green {
   color: #22a75d;
   border-bottom: 4px solid #22a75d;
 }
-
 .blocks .items .item .subTitle .blue {
   color: #2278d4;
   border-bottom: 4px solid #2278d4;
 }
-
 .blocks .items .item .subText {
   margin-bottom: 40px;
 }
-
 .blocks .items .item .img {
   text-align: center;
   display: flex;
   justify-content: flex-end;
 }
-
+@media screen and (max-width: 1000px) {
+  .blocks .items .item .img {
+    justify-content: center;
+  }
+}
 .blocks .items .item .img img {
   width: 100%;
   max-width: 500px;
   max-height: 500px;
 }
-
 .blocks .items .item .img .creators {
   margin-top: 50px;
 }
-
 .blocks .items .item .img .hodlers {
-  transform: scale(1.5) translate(-10%, -16.25%);
+  transform: scale(1.5) translate(-10%, -16.75%);
+}
+@media screen and (max-width: 1000px) {
+  .blocks .items .item .img .hodlers {
+    transform: scale(1.5) translate(0%, -16.75%);
+  }
 }
 
 .achieve {
   position: relative;
 }
-
+@media screen and (max-width: 2000px) {
+  .achieve {
+    margin-top: 150px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .achieve {
+    margin-top: 50px;
+  }
+}
 .achieve .container {
   visibility: hidden;
 }
-
 .achieve .paperPlane {
   position: absolute;
   right: 40px;
@@ -403,46 +491,60 @@ header .main .itemImg img {
   z-index: -1;
   opacity: 0.7;
 }
-
 .achieve .lineImg {
   margin-bottom: 50px;
 }
-
+@media screen and (max-width: 340px) {
+  .achieve .lineImg {
+    display: none;
+  }
+}
 .achieve .lineImg img {
   max-width: 1270px;
   width: 100%;
 }
-
 .achieve .achieveLine {
   display: flex;
   gap: 146px;
   align-items: center;
 }
-
+@media screen and (max-width: 340px) {
+  .achieve .achieveLine {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+}
 .achieve .achieveLine .date .month {
   color: #22a75d;
   font-weight: 700;
   margin-bottom: 5px;
 }
-
 .achieve .achieveLine .date .year {
   font-size: 36px;
 }
-
+@media screen and (max-width: 532px) {
+  .achieve .achieveLine .date .year {
+    font-size: 16px;
+  }
+}
 .achieve .achievements {
   display: flex;
   gap: 30px;
 }
-
+@media screen and (max-width: 1000px) {
+  .achieve .achievements {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
 .achieve .achievements ol {
   counter-reset: ol-numbers;
 }
-
 .achieve .achievements ol li {
   position: relative;
   padding: 0px 0px 20px 50px;
 }
-
 .achieve .achievements ol li::before {
   counter-increment: ol-numbers;
   content: "0" counter(ol-numbers);
@@ -462,52 +564,64 @@ header .main .itemImg img {
   background-position: bottom;
   background-attachment: scroll;
 }
-
 .tokens .container {
   visibility: hidden;
 }
-
 .tokens .items {
   display: flex;
   gap: 160px;
 }
-
+@media screen and (max-width: 1000px) {
+  .tokens .items {
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+}
 .tokens .items .rocket {
   top: 100px;
   left: -200px;
   position: absolute;
 }
-
+@media screen and (max-width: 1000px) {
+  .tokens .items .rocket {
+    top: 50px;
+    left: 0px;
+  }
+}
 .tokens .items .rocket img {
   max-width: 700px;
   width: 100%;
 }
-
 .tokens .items .item1 {
   flex: 1 1 40%;
 }
-
+@media screen and (max-width: 1000px) {
+  .tokens .items .item1 {
+    flex: 1 1 100%;
+  }
+}
 .tokens .items .item1 .subTitle {
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 20px;
 }
-
 .tokens .items .item1 .text p {
   margin-bottom: 30px;
   opacity: 0.7;
 }
-
 .tokens .items .item1 .text p em {
   font-weight: 700;
 }
-
 .tokens .items .item2 {
   flex: 1 1 40%;
   width: 100%;
   position: relative;
 }
-
+@media screen and (max-width: 1000px) {
+  .tokens .items .item2 {
+    text-align: center;
+  }
+}
 .tokens .items .item2 .clouds {
   max-width: 700px;
   width: 100%;
@@ -515,52 +629,76 @@ header .main .itemImg img {
 
 .sale {
   position: relative;
-  margin-top: 450px;
+  margin-top: 200px;
   visibility: hidden;
 }
-
+@media screen and (max-width: 868px) {
+  .sale {
+    margin-top: 100px;
+    color: black;
+  }
+}
 .sale .buy {
   margin-top: 200px;
   text-align: center;
   color: white;
 }
-
 .sale .buy .title {
   margin-bottom: 30px;
+  color: white;
 }
-
 .sale .buy p {
   margin: 5px 0px;
 }
-
 .sale .title {
   text-align: center;
-  color: white;
+  color: rgba(0, 0, 0, 0.7);
 }
-
+@media screen and (max-width: 868px) {
+  .sale .title {
+    color: black;
+  }
+}
 .sale .itemsSale {
   display: flex;
   margin-top: 50px;
   gap: 20px;
   justify-content: center;
 }
-
+@media screen and (max-width: 868px) {
+  .sale .itemsSale {
+    flex-wrap: wrap;
+  }
+}
 .sale .itemsSale .itemtwo {
   margin-top: 50px;
   margin-bottom: -50px;
 }
-
+@media screen and (max-width: 868px) {
+  .sale .itemsSale .itemtwo {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+}
 .sale .itemsSale .itemtwo .guy {
   position: absolute;
   left: -170px;
 }
-
+@media screen and (max-width: 532px) {
+  .sale .itemsSale .itemtwo .guy {
+    display: none;
+  }
+}
 .sale .itemsSale .itemtwo .family {
   position: absolute;
-  right: -120px;
+  right: -140px;
   z-index: 2;
 }
-
+@media screen and (max-width: 868px) {
+  .sale .itemsSale .itemtwo .family {
+    display: none;
+  }
+}
 .sale .itemsSale .item {
   padding: 140px 120px;
   background-color: white;
@@ -569,40 +707,43 @@ header .main .itemImg img {
   position: relative;
   width: 100%;
 }
-
+@media screen and (max-width: 1320px) {
+  .sale .itemsSale .item {
+    padding: 100px 80px;
+  }
+}
+@media screen and (max-width: 868px) {
+  .sale .itemsSale .item {
+    padding: 100px 80px;
+  }
+}
 .sale .itemsSale .item .number {
   position: absolute;
   top: 0px;
   left: 50%;
   transform: translate(-50%, 20%);
 }
-
 .sale .itemsSale .item .number img {
   width: 100%;
 }
-
 .sale .itemsSale .item .phase {
   font-weight: 600;
   margin-bottom: 50px;
   font-size: 32px;
 }
-
 .sale .itemsSale .item .phase .date {
   margin-top: 10px;
   font-size: 16px;
   font-weight: 400;
 }
-
 .sale .itemsSale .item .cost {
   font-weight: 600;
 }
-
 .sale .itemsSale .item .cost .soft {
   margin-top: 20px;
   margin-bottom: 10px;
   font-weight: 400;
 }
-
 .sale .itemsSale .item .cost .hard {
   font-weight: 400;
 }
@@ -613,7 +754,6 @@ footer {
   padding-bottom: 100px;
   background-color: #1d1534;
 }
-
 footer .footer {
   display: flex;
   align-items: center;
@@ -621,51 +761,64 @@ footer .footer {
   margin-top: 100px;
   gap: 10px;
 }
-
+@media screen and (max-width: 1000px) {
+  footer .footer {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 footer .footer .copyright {
   color: white;
 }
-
 footer .footer .social {
   display: flex;
   gap: 20px;
   align-items: center;
 }
-
+@media screen and (max-width: 868px) {
+  footer .footer .social {
+    gap: 10px;
+  }
+}
 footer .footer .social .telegram {
   padding: 10px;
 }
-
 footer .footer .social a {
   border: 2px solid rgba(255, 255, 255, 0.1);
   padding: 10px 12px;
   border-radius: 100px;
   transition: all 0.3s;
 }
-
 footer .footer .social a:hover {
   border: 2px solid transparent;
   background-color: rgba(255, 255, 255, 0.2);
 }
-
 footer .menu {
   display: flex;
   justify-content: center;
 }
-
 footer .menu ul {
   display: flex;
   gap: 40px;
   color: white;
 }
-
+@media screen and (max-width: 1000px) {
+  footer .menu ul {
+    gap: 20px;
+  }
+}
+@media screen and (max-width: 868px) {
+  footer .menu ul {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 footer .menu ul .link a {
   text-transform: uppercase;
   color: white;
   text-decoration: none;
   position: relative;
 }
-
 footer .menu ul .link a:after {
   content: "";
   border-bottom: 2px solid white;
@@ -679,7 +832,6 @@ footer .menu ul .link a:after {
   position: absolute;
   transition: all 0.3s;
 }
-
 footer .menu ul .separator {
   opacity: 0.4;
 }
@@ -705,7 +857,6 @@ html {
   border: 1px solid #000000;
   transition: all 0.3s;
 }
-
 .btnWhite a {
   text-decoration: none;
   color: black;
@@ -718,7 +869,6 @@ html {
   display: inline-flex;
   transition: all 0.3s;
 }
-
 .btnGreen a {
   text-transform: uppercase;
   color: white;
@@ -746,7 +896,6 @@ html {
   z-index: 1;
   position: relative;
 }
-
 .menuBurger .line {
   border-radius: 12px;
   width: 46px;
@@ -754,6 +903,11 @@ html {
   background-color: white;
   display: inline-block;
   transition: all 0.3s;
+}
+@media screen and (max-width: 532px) {
+  .menuBurger .line {
+    background-color: #000000;
+  }
 }
 
 .menuBurgerBg {
@@ -766,6 +920,26 @@ html {
   transition: all 0.3s;
 }
 
+@media (hover: hover) {
+  .btnWhite:hover {
+    background-color: transparent;
+  }
+
+  .btnGreen:hover {
+    background-color: #2278d4;
+  }
+
+  nav ul li a:hover:after,
+.menu ul .link a:hover:after,
+.sign .in a:hover:after {
+    width: 0%;
+  }
+}
+@media screen and (max-width: 660px) {
+  body {
+    overflow-x: clip !important;
+  }
+}
 .signinPopup {
   position: absolute;
   top: 50%;
@@ -779,20 +953,17 @@ html {
   padding: 20px;
   z-index: 2;
 }
-
 .signinPopup .signTitle {
   text-align: center;
   color: coral;
   font-size: 18px;
 }
-
 .signinPopup .close {
   display: flex;
   gap: 6px;
   flex-direction: column;
   cursor: pointer;
 }
-
 .signinPopup .close .line {
   height: 3px;
   width: 24px;
@@ -801,62 +972,49 @@ html {
   background-color: black;
   display: block;
 }
-
 .signinPopup .close .line1 {
   transform: translate(0%, 150%) rotate(45deg);
 }
-
 .signinPopup .close .line2 {
   transform: translate(0%, -150%) rotate(-45deg);
 }
-
 .signinPopup .noacc {
   margin-top: 10px;
   text-align: center;
   cursor: pointer;
 }
-
 .signinPopup .noacc a {
   text-decoration: none;
   transition: all 0.3s;
 }
-
 .signinPopup .noacc a:hover {
   color: coral;
 }
-
 .signinPopup form {
   display: flex;
   flex-direction: column;
   gap: 10px;
   margin-top: 20px;
 }
-
 .signinPopup form input {
   border: 1px solid coral;
   border-radius: 25px;
   padding: 10px;
   font-family: AzoSans;
 }
-
 .signinPopup form .submit {
   transition: all 0.3s;
   cursor: pointer;
 }
-
 .signinPopup form .submit:hover {
   background-color: coral;
 }
-
 .signinPopup form .password {
-  display: -ms-grid;
   display: grid;
 }
-
 .signinPopup form .forgot {
   margin-top: 5px;
 }
-
 .signinPopup form .forgot a {
   cursor: pointer;
   text-decoration: none;
@@ -864,227 +1022,6 @@ html {
   margin-left: 10px;
   transition: all 0.3s;
 }
-
 .signinPopup form .forgot a:hover {
   color: coral;
-}
-
-@media screen and (max-width: 2000px) {
-  .achieve {
-    margin-top: 150px;
-  }
-}
-
-@media screen and (max-width: 1320px) {
-  .sale .itemsSale .item {
-    padding: 100px 80px;
-  }
-}
-
-@media screen and (max-width: 1080px) {
-  header nav {
-    gap: 30px;
-  }
-
-  header nav ul {
-    gap: 20px;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  header nav {
-    width: 100%;
-    visibility: hidden;
-    flex-direction: column;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-350%, -50%);
-    z-index: 1;
-    text-align: center;
-    transition: all 0.3s;
-  }
-
-  header nav ul {
-    flex-direction: column;
-  }
-
-  header nav ul li a {
-    font-size: 28px;
-  }
-
-  header .sign a {
-    font-size: 28px;
-  }
-
-  .blocks .info {
-    flex-wrap: wrap;
-  }
-
-  .blocks .items {
-    flex-wrap: wrap;
-  }
-
-  .blocks .items .item .img {
-    justify-content: center;
-  }
-
-  .blocks .items .item .img .hodlers {
-    transform: scale(1.5) translate(0%, -16.5%);
-  }
-
-  .achieve {
-    margin-top: 50px;
-  }
-
-  .achieve .achievements {
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-
-  .tokens .items {
-    flex-wrap: wrap;
-    gap: 20px;
-  }
-
-  .tokens .items .rocket {
-    top: 50px;
-    left: 0px;
-  }
-
-  .tokens .items .item1 {
-    flex: 1 1 100%;
-  }
-
-  .tokens .items .item2 {
-    text-align: center;
-  }
-
-  footer .footer {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  footer .menu ul {
-    gap: 20px;
-  }
-}
-
-@media screen and (max-width: 868px) {
-  header .main .container {
-    flex-wrap: wrap;
-  }
-
-  header .main .itemText {
-    max-width: 100%;
-    text-align: center;
-  }
-
-  header .main .itemImg {
-    justify-content: center;
-    margin-right: -125px;
-  }
-
-  .blocks {
-    padding: 10px;
-    padding-bottom: 180px;
-  }
-
-  .blocks .items .item {
-    padding: 20px 30px 0px 30px;
-  }
-
-  .sale {
-    margin-top: 800px;
-  }
-
-  .sale .itemsSale {
-    flex-wrap: wrap;
-  }
-
-  .sale .itemsSale .itemtwo {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-
-  .sale .itemsSale .itemtwo .family {
-    display: none;
-  }
-
-  .sale .itemsSale .item {
-    padding: 100px 80px;
-  }
-
-  footer .footer .social {
-    gap: 10px;
-  }
-
-  footer .menu ul {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-}
-
-@media screen and (max-width: 532px) {
-  header {
-    padding: 20px 22.5px;
-  }
-
-  .blocks .info .logo {
-    margin-right: 10px;
-  }
-
-  .blocks .info .title {
-    margin-right: 0px;
-  }
-
-  .blocks .items {
-    margin-top: 50px;
-  }
-
-  .achieve .achieveLine .date .year {
-    font-size: 16px;
-  }
-
-  .sale {
-    margin-top: 900px;
-  }
-
-  .sale .itemsSale .itemtwo .guy {
-    display: none;
-  }
-
-  .menuBurger .line {
-    background-color: #000000;
-  }
-}
-
-@media screen and (max-width: 465px) {
-  .blocks .info .infoBlock .text {
-    color: grey;
-  }
-
-  .blocks .info .infoBlock .text p {
-    opacity: 1;
-  }
-
-  .sale {
-    margin-top: 1200px;
-  }
-}
-
-@media (hover: hover) {
-  .btnWhite:hover {
-    background-color: transparent;
-  }
-
-  .btnGreen:hover {
-    background-color: #2278d4;
-  }
-
-  nav ul li a:hover:after,
-  .menu ul .link a:hover:after,
-  .sign .in a:hover:after {
-    width: 0%;
-  }
 }
